--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^8.0",
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.0",
+        "livewire/livewire": "^2.3",
         "spatie/laravel-medialibrary": "^8.0.0"
     },
     "require-dev": {
